tests/snapshots/api/node-metrics_version.snap
---
source: tests/common/api_snapshot.rs
---
app_version: ~
disco_version: "<string>"
modules:
  node-validator:
    - api_version: "<string>"
      spec_version: "<string>"
