tests/snapshots/api/node0_v1_availability_limits.snap
---
source: tests/common/api_snapshot.rs
---
large_object_range_limit: 100
small_object_range_limit: 500
