tests/snapshots/api/node0_v1_availability_namespace_proof_by_height.snap
---
source: tests/common/api_snapshot.rs
---
proof:
  V1:
    ns_index: "<number>"
    ns_payload: "<string>"
    ns_proof: "<string>"
transactions:
  - namespace: "<number>"
    payload: "<string>"
