tests/snapshots/api/node0_v1_availability_payload_by_hash.snap
---
source: tests/common/api_snapshot.rs
---
block_hash: "<masked>"
data:
  ns_table:
    bytes: AAAAAA==
  raw_payload: ""
hash: "<masked>"
height: 0
size: 0
