tests/snapshots/api/node0_v1_availability_state_cert.snap
---
source: tests/common/api_snapshot.rs
---
epoch: "<number>"
light_client_state: "<string>"
next_stake_table_state: "<string>"
signatures:
  - - "<string>"
